--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name="ir.elevin.azhand.AppController"
+        android:name=".AppController"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
@@ -15,29 +15,32 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning,UnusedAttribute">
-        <activity android:name="ir.elevin.azhand.ChooseAddressActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity
-            android:name="ir.elevin.azhand.CartActivity"
+        <activity android:name=".OrdersActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="ir.elevin.azhand.ProductDetailActivity"
+            android:name=".ChooseAddressActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="ir.elevin.azhand.LoginActivity"
+            android:name=".CartActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ProductDetailActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LoginActivity"
             android:theme="@style/Dialogam" />
         <activity
-            android:name="ir.elevin.azhand.UpgradeActivity"
+            android:name=".UpgradeActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="ir.elevin.azhand.ImageViewerActivity"
+            android:name=".ImageViewerActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name="ir.elevin.azhand.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustNothing">
