--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -42,6 +46,8 @@ dependencies {
 //    implementation 'com.github.yalantis:ucrop:2.2.3-native'
     implementation 'com.github.yalantis:ucrop:2.2.3'
 
+    implementation "com.github.mortezamim:Woocommerce-Helper-Android:0.0.6"
+
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.smarteist:autoimageslider:1.3.1'
 
@@ -52,6 +58,7 @@ dependencies {
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
 
     implementation 'com.simmorsal.recolor:recolor:1.1.0'
+    implementation 'org.scribe:scribe:1.3.5'
 
     implementation 'com.github.kittinunf.fuel:fuel:1.13.0' //for JVM
     implementation 'com.github.kittinunf.fuel:fuel-android:1.13.0' //for Android
