--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     implementation 'com.simmorsal.recolor:recolor:1.1.0'
     implementation 'org.scribe:scribe:1.3.5'
 
+    implementation 'com.google.code.gson:gson:2.8.5'
+
     implementation 'com.github.kittinunf.fuel:fuel:1.13.0' //for JVM
     implementation 'com.github.kittinunf.fuel:fuel-android:1.13.0' //for Android
     implementation 'com.github.kittinunf.fuel:fuel-livedata:1.13.0' //for LiveData support
