--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ dependencies {
     implementation 'com.github.kittinunf.fuel:fuel-rxjava:1.13.0' //for RxJava support
     implementation 'com.github.kittinunf.fuel:fuel-coroutines:1.13.0'
 
+    implementation 'com.zarinpal:purchase:0.0.8-beta'
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
+
     implementation 'com.github.kittinunf.fuel:fuel-gson:1.13.0' //for Gson support
     implementation 'com.github.kittinunf.fuel:fuel-jackson:1.13.0' //for Jackson support
     implementation 'com.github.kittinunf.fuel:fuel-moshi:1.13.0' //for Moshi support
@@ -86,6 +89,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.daimajia.easing:library:2.0@aar'
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
+
+    implementation 'org.sufficientlysecure:html-textview:3.6'
 
     implementation "org.jetbrains.anko:anko-sqlite:0.10.8"
 //    implementation 'com.github.mjn1369:prettydialog:1.0.4'
